--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
     "framer-motion": "^12.23.9",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
